crates/embedded-bitmap-font-macros/tests/ui/font_data_duplicate_index_fail.rs
use embedded_bitmap_font::FontData;
use embedded_bitmap_font_macros::font_data;

const _FONT18: FontData<'static> = font_data! {
    size: 18,
    path: "../../.ref/Cubic_11.ttf",
    index: "AB",
    path: "../../.ref/Cubic_11.ttf",
    index: "BA",
};

fn main() {}
